--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 :root {
+  font-family: "Black Sans", sans-serif;
+  width: 100%;
+}
+
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -30,4 +35,4 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-}
+} */
